# mailroom

./: .gitignore  README.md  pyproject.toml
mailroom/: cli.py  mailroom_model.py
tests/: test_mailroom_model.py
